dockerfile added
